Resolves: tdf#113366 Contour editor does not open

reportedly

This reverts commit 15869ea2dcd8a6b33044d08eef6fcaf8ca54579d.

Change-Id: I930567f8dd9701a14ab02f42f89a629949453f22